force-app/main/default/objects/Batch_Definition__c/fields/BatchSchedulerClass__c.field-meta.xml
<CustomField>
    <fullName>BatchSchedulerClass__c</fullName>
    <description>The name of the class that&apos;s used to schedule the job</description>
    <inlineHelpText>The name of the class that&apos;s used to schedule the job</inlineHelpText>
    <label>Batch Scheduler Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>