force-app/main/default/objects/Batch_Definition__c/fields/CronExpression__c.field-meta.xml
<CustomField>
    <fullName>CronExpression__c</fullName>
    <description>Cron Expression used to run the batch with a custom schedule</description>
    <label>Cron Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>