force-app/main/default/objects/Batch_Definition__c/fields/CronTriggerId__c.field-meta.xml
<CustomField>
    <fullName>CronTriggerId__c</fullName>
    <description>Id of the schedule job</description>
    <label>Cron Trigger Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>