force-app/main/default/objects/Batch_Definition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of what the batch does</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>