force-app/main/default/objects/Batch_Definition__c/fields/RunDescription__c.field-meta.xml
<CustomField>
    <fullName>RunDescription__c</fullName>
    <description>Description of when the batch runs</description>
    <label>Run Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>